--- a/src/ChatApp/wwwroot/documentation/README.html
+++ b/src/ChatApp/wwwroot/documentation/README.html
@@ -64,12 +64,9 @@
 
 <p>Simple ASP.NET Core, SignalR Core and Azure table storage based chat done as interview test.</p>
 <h2 id="testing">Testing</h2>
-<p>To see the chat in action go to <a href="https://www.hs.fi">chat</a></p>
+<p>To see the chat in action go to <a href="https://taintochatapp.azurewebsites.net/">chat</a></p>
 <h2 id="documentation">Documentation</h2>
-<p>Documentation and reasonings for implementation can be seen at <a href="https://www.hs.fi">documentation</a></p>
-<h2 id="hosting">Hosting</h2>
-<p>To host chat in your own Azure subscription, execute <code>deploy.ps1</code> at the repository root.</p>
-<p><strong>Note: To run the script, you must have Azure PowerShell installed</strong></p>
+<p>Documentation and reasonings for implementation can be seen at <a href="https://taintochatapp.azurewebsites.net/documentation/index.html">documentation</a></p>
 </article>
           </div>
           
@@ -77,6 +74,9 @@
             <div class="sideaffix">
               <div class="contribution">
                 <ul class="nav">
+                  <li>
+                    <a href="https://github.com/Tuosaari/chatapp/blob/master/README.md/#L1" class="contribution-link">Improve this Doc</a>
+                  </li>
                 </ul>
               </div>
               <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix" id="affix">
